--- a/templates/tictactoe.kv
+++ b/templates/tictactoe.kv
@@ -1,11 +1,20 @@
 #: kivy 2.0
 #: import TicTacToe screens.tictactoe
+#: import Tile screens.tictactoe
 #: import StringProperty kivy.properties.StringProperty
 
 <Label>:
     markup: True
     color: (.27, .27, .27, 1)
 
+<Tile>:
+    canvas.before:
+        Color:
+            rgba: (1, 1, 1, 1)
+        Rectangle:
+            size: self.size
+            pos: self.pos
+    on_press: app.root.ids.tictactoe.make_move(self)
 
 <PlayerDataLayout@BoxLayout>
     orientation:'vertical'
@@ -22,12 +31,13 @@
         Label:
             text: 'PLAYER '
             font_size: self.width/5
-            size_hint_x: 0.7
-            allow_stretch: True
-        Image:
-            source: str(root.dice_image)
-            size_hint_x: 0.3
-            allow_stretch: True
+            size_hint_x: 0.8
+        BoxLayout:
+            orientation:'vertical'
+            size_hint_x: 0.2
+            padding: ('0dp', '5dp', '0dp', '5dp')
+            Image:
+                source: str(root.dice_image)
     Label:
         canvas.before:
             Color:
@@ -48,15 +58,6 @@
         font_size: self.width/6
         bold: True
 
-<Tile>:
-    canvas.before:
-        Color:
-            rgba: (1, 1, 1, 1)
-        Rectangle:
-            size: self.size
-            pos: self.pos
-    on_press: app.root.ids.tictactoe.make_move(self)
-
 
 <TicTacToe>:
     id: 'tictactoe'
@@ -74,7 +75,7 @@
             BoxLayout:
                 orientation:'horizontal'
                 size_hint: (1, 0.3)
-                padding: ('20dp', '20dp', '20dp', '10dp')
+                padding: ('10dp', '10dp', '10dp', '10dp')
                 spacing: '10dp'
                 PlayerDataLayout:
                     dice_image: root.player1.active_dice_image
@@ -84,7 +85,7 @@
                     score: str(root.player2.score)
             GridLayout:
                 id: grid_layout
-                spacing: 2
+                spacing: '2dp'
                 rows: root.rows
                 cols: root.cols
                 canvas.before:
